# large-4dstem-analysis

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/: 0617_4d_stage1.yaml  0617_4d_stage1_enhanced.yaml  0617_4d_stage2_indexing.yaml  0617_4d_stage2_roi_bragg.yaml  0617_4d_workflow.yaml  0617_4d_workflow_rbin1.yaml  0617_4d_workflow_rbin2.yaml  1_0_64_0_64_stage1.yaml  1_0_64_0_64_stage2_indexing.yaml  1_0_64_0_64_stage2_roi_bragg.yaml  1_R4Q2_L_stage1.yaml  1_R4Q2_L_stage2_indexing.yaml  1_R4Q2_L_stage2_roi_bragg.yaml  1_R4Q2_crop64_stage2_indexing.yaml  1_R4Q2_crop64_stage2_roi_bragg.yaml  1_R4Q2_crop64_workflow.yaml  1_R4Q2_stage1.yaml  1_R4Q2_stage2_indexing.yaml  1_R4Q2_stage2_roi_bragg.yaml  default_workflow.yaml  pipeline.yaml  pipeline_smoke.yaml  stage2_indexing.yaml  stage2_roi_bragg.yaml  stage2_smoke_test.yaml
data/0617-4d/: Al_fcc.cif  Fe_bcc.cif  Ni_fcc.cif  TiO2_rutile.cif  Ti_hcp_wrong_a.cif
notebooks/: 01_full_workflow.ipynb
scripts/: crop_export_grid_64.bat  merge_orientation_phase_maps.bat  pyxem_hyperspy_ti_phase_orientation.py  run_orientation_phase_batch.bat  run_orientation_phase_branch_jobs.bat  run_stage2b_sweep.py  run_workflow.py
src/fourdstem_pipeline/: __init__.py  array_utils.py  cli.py  config.py  consensus.py  contracts.py  dataset.py  diagnostics.py  diagnostics_cluster.py  diagnostics_spatial.py  diffraction.py  evidence_qc.py  export.py  export_stage2.py  fingerprints.py  indexing.py  loaders.py  logging.py  masks.py  orientation.py  phase.py  pipeline.py  plotting.py  preprocess.py  preprocess_raw.py  provenance.py  pyxem_validation.py  qc.py  roi_bragg.py  sample_mask.py  stage2.py  synthetic.py  virtual.py  workflow.py
tests/: conftest.py  test_workflow.py
