[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "large-mib-4dstem-analysis"
version = "0.1.0"
description = "Notebook-first 4D-STEM workflow for virtual imaging, phase screening, and orientation preview."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "pyyaml>=6",
    "scikit-learn>=1.3",
    "nbformat>=5",
]

[project.optional-dependencies]
large-data = [
    "dask[array]>=2024.1",
    "hyperspy>=2",
    "pyxem>=0.20",
    "zarr>=2",
]
desktop = [
    "PySide6>=6.6",
    "pyqtgraph>=0.13",
]
test = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
