[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "large-4dstem-analysis"
version = "0.1.0"
description = "Single non-visual 4D-STEM workflow for virtual imaging, phase screening, and orientation preview."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6",
    "scikit-learn>=1.3",
]

[project.scripts]
fourdstem-pipeline = "fourdstem_pipeline.cli:pipeline"
fourdstem-run = "fourdstem_pipeline.cli:run"
fourdstem-dry-run = "fourdstem_pipeline.cli:dry_run"
fourdstem-stage2 = "fourdstem_pipeline.cli:stage2"
fourdstem-stage2b = "fourdstem_pipeline.cli:stage2b"
fourdstem-bin-export = "fourdstem_pipeline.cli:bin_export"
fourdstem-crop-export = "fourdstem_pipeline.cli:crop_export"

[project.optional-dependencies]
large-data = [
    "dask[array]>=2024.1",
    "hyperspy>=2",
    "pyxem>=0.20",
    "zarr>=2",
]
diffraction = [
    "py4DSTEM @ git+https://github.com/py4dstem/py4DSTEM.git@dev",
    "pandas>=2",
    "pyarrow>=14",
]
test = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
